--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -7,6 +7,8 @@
 <StackLayout class="p-20">
     <Button [nsRouterLink]="['/login']" text="login"></Button>
     <Button [nsRouterLink]="['/verify-code']" text="verify-code"></Button>
+    <Button [nsRouterLink]="['/verify-phone']" text="verify-phone"></Button>
+    <Button [nsRouterLink]="['/verify-email']" text="verify-email"></Button>
     <Button [nsRouterLink]="['/reset-password']" text="reset-password"></Button>
     <Button [nsRouterLink]="['/modal-success']" text="modal-success"></Button>
     <Button [nsRouterLink]="['/modal-error']" text="modal-error"></Button>
