--- a/app/create-account/create-account.component.html
+++ b/app/create-account/create-account.component.html
@@ -3,76 +3,118 @@
         <Image src="~/assets/images/logo.png"></Image>
     </FlexboxLayout>
 </ActionBar>
-
-<FlexboxLayout
-    flexDirection="column"
-    flexWrap="nowrap"
-    justifyContent="space-between"
-    backgroundColor="#242424"
->
-    <StackLayout class="container create-account-page">
-        <Label
-            class="title mb-4"
-            textAlignment="center"
-            text="Create your account"
-            textTransform="uppercase"
-        ></Label>
-        <StackLayout>
-            <FlexboxLayout class="form-group row mb-3">
-                <StackLayout class="col" flexGrow="1">
+<ScrollView>
+    <FlexboxLayout
+        flexDirection="column"
+        flexWrap="nowrap"
+        justifyContent="space-between"
+        backgroundColor="#242424"
+    >
+        <StackLayout class="container create-account-page">
+            <Label
+                class="title mb-4"
+                textAlignment="center"
+                text="Create your account"
+                textTransform="uppercase"
+            ></Label>
+            <StackLayout>
+                <FlexboxLayout class="form-group row mb-3">
+                    <StackLayout class="col" flexGrow="1">
+                        <TextField
+                            class="form-control"
+                            hint="FIRST NAME"
+                            text=""
+                        ></TextField>
+                    </StackLayout>
+                    <StackLayout class="col" flexGrow="1">
+                        <TextField
+                            class="form-control"
+                            hint="LAST NAME"
+                            text=""
+                        ></TextField>
+                    </StackLayout>
+                </FlexboxLayout>
+                <StackLayout class="form-group mb-3">
                     <TextField
                         class="form-control"
-                        hint="FIRST NAME"
+                        hint="EMAIL"
                         text=""
                     ></TextField>
                 </StackLayout>
-                <StackLayout class="col" flexGrow="1">
+                <FlexboxLayout class="form-group row mb-3">
+                    <StackLayout class="col" flexGrow="1">
+                        <TextField
+                            class="form-control"
+                            hint="+84"
+                            text=""
+                        ></TextField>
+                    </StackLayout>
+                    <StackLayout class="col" flexGrow="3">
+                        <TextField
+                            class="form-control"
+                            hint="PHONE NUMBER"
+                            text=""
+                        ></TextField>
+                    </StackLayout>
+                </FlexboxLayout>
+                <StackLayout class="form-group mb-3">
                     <TextField
                         class="form-control"
-                        hint="LAST NAME"
+                        hint="PASSWORD"
                         text=""
+                        secure="true"
                     ></TextField>
                 </StackLayout>
-            </FlexboxLayout>
-            <StackLayout class="form-group mb-3">
-                <TextField
-                    class="form-control"
-                    hint="EMAIL"
-                    text=""
-                ></TextField>
+                <StackLayout class="form-group mb-3">
+                    <TextField
+                        class="form-control"
+                        hint="CONFIRM PASSWORD"
+                        text=""
+                        secure="true"
+                    ></TextField>
+                </StackLayout>
+                <StackLayout class="form-group mb-3">
+                    <TextField
+                        class="form-control"
+                        hint="REFERRAL CODE"
+                        text=""
+                        secure="true"
+                    ></TextField>
+                </StackLayout>
             </StackLayout>
-            <FlexboxLayout class="form-group row mb-3">
-                <StackLayout class="col" flexGrow="1">
-                    <TextField
-                        class="form-control"
-                        hint="+84"
-                        text=""
-                    ></TextField>
-                </StackLayout>
-                <StackLayout class="col" flexGrow="3">
-                    <TextField
-                        class="form-control"
-                        hint="PHONE NUMBER"
-                        text=""
-                    ></TextField>
-                </StackLayout>
+        </StackLayout>
+        <StackLayout class="container">
+            <FlexboxLayout class="checkbox active mt-3 mb-4">
+                <FlexboxLayout class="checkbox-square">
+                    <StackLayout class="checkbox-active" flexGrow="1">
+                    </StackLayout>
+                </FlexboxLayout>
+                <FlexboxLayout alignItems="center">
+                    <Label class="text-mute" text="I agree to all "></Label>
+                    <Label
+                        class="text-white"
+                        text="Terms & Conditions"
+                        color="#fff"
+                    ></Label>
+                </FlexboxLayout>
+            </FlexboxLayout>
+            <Button class="btn-primary" text="CREATE ACCOUNT"></Button>
+            <FlexboxLayout
+                class="mt-4 mb-4"
+                alignItems="center"
+                justifyContent="center"
+            >
+                <Label
+                    class="text-mute"
+                    text="Already have an account? "
+                ></Label>
+                <Label
+                    class=""
+                    text="Sign in"
+                    textAlignment="center"
+                    fontWeight="500"
+                ></Label>
             </FlexboxLayout>
         </StackLayout>
-    </StackLayout>
-    <StackLayout class="container">
-        <Button class="btn-primary" text="Verify"></Button>
-        <FlexboxLayout
-            class="mt-4 mb-4"
-            alignItems="center"
-            justifyContent="center"
-        >
-            <Label class="text-mute" text="Already have an account? "></Label>
-            <Label
-                class=""
-                text="Sign in"
-                textAlignment="center"
-                fontWeight="500"
-            ></Label>
-        </FlexboxLayout>
-    </StackLayout>
-</FlexboxLayout>
+    </FlexboxLayout>
+</ScrollView>
