--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -13,4 +13,5 @@
     <Button [nsRouterLink]="['/modal-success']" text="modal-success"></Button>
     <Button [nsRouterLink]="['/modal-error']" text="modal-error"></Button>
     <Button [nsRouterLink]="['/create-account']" text="create-account"></Button>
+    <Button [nsRouterLink]="['/home-page']" text="home-page"></Button>
 </StackLayout>
