--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -3,133 +3,176 @@
         <Image src="~/assets/images/logo.png"></Image>
     </FlexboxLayout>
 </ActionBar>
-
-<FlexboxLayout
-    flexDirection="column"
-    justifyContent="flex-start"
-    backgroundColor="#fff"
->
-    <StackLayout
-        class="banner"
-        backgroundImage="~/assets/images/banner.png"
-        height="250"
+<AbsoluteLayout backgroundColor="#242424">
+    <FlexboxLayout
+        flexDirection="column"
+        justifyContent="flex-start"
+        top="0"
+        left="0"
+        width="100%"
     >
-    </StackLayout>
-
-    <ScrollView flexGrow="1" orientation="vertical">
-        <FlexboxLayout
-            class="login-page"
-            backgroundColor="#242424"
-            flexDirection="column"
-            justifyContent="flex-start"
+        <StackLayout
+            class="banner"
+            backgroundImage="~/assets/images/banner.png"
+            height="250"
         >
-            <StackLayout class="login-inside">
-                <TextField
-                    hint="USERNAME"
-                    text=""
-                    class="form-control mb-3"
-                ></TextField>
-                <TextField
-                    hint="PASSWORD"
-                    text=""
-                    class="form-control"
-                ></TextField>
-                <FlexboxLayout class="checkbox mt-3 mb-3">
-                    <FlexboxLayout class="checkbox-square">
-                        <StackLayout class="checkbox-active" flexGrow="1">
-                        </StackLayout>
-                    </FlexboxLayout>
-                    <Label text="Remember me" textWrap="true"></Label>
-                </FlexboxLayout>
-                <Button class="btn-primary" [text]="'Sign in'"></Button>
-                <Label
-                    text="Forgot password?"
-                    textWrap="true"
-                    textAlignment="center"
-                    color="#fff"
-                    marginTop="15"
-                    marginBottom="15"
-                ></Label>
-            </StackLayout>
+        </StackLayout>
 
+        <ScrollView flexGrow="1" orientation="vertical">
             <FlexboxLayout
-                flexDirection="row"
-                alignItems="center"
-                justifyContent="center"
-                flexWrap="wrap"
+                class="login-page"
+                backgroundColor="#242424"
+                flexDirection="column"
+                justifyContent="flex-start"
             >
-                <Label
-                    text="Don't have an account?"
-                    textWrap="true"
-                    color="#aaa"
-                ></Label>
-                <Label
-                    text="Create account"
-                    textWrap="true"
-                    fontWeight="600"
-                    color="#fff"
-                    marginLeft="10"
-                ></Label>
-                <Label
-                    text="or login with"
-                    textWrap="true"
-                    color="#aaa"
-                    width="100%"
-                    textAlignment="center"
-                ></Label>
+                <StackLayout class="login-inside">
+                    <TextField
+                        hint="USERNAME"
+                        text=""
+                        class="form-control mb-3"
+                    ></TextField>
+                    <TextField
+                        hint="PASSWORD"
+                        text=""
+                        class="form-control"
+                    ></TextField>
+                    <!-- <FlexboxLayout class="checkbox mt-3 mb-3">
+                        <FlexboxLayout class="checkbox-square">
+                            <StackLayout class="checkbox-active" flexGrow="1">
+                            </StackLayout>
+                        </FlexboxLayout>
+                        <Label text="Remember me" textWrap="true"></Label>
+                    </FlexboxLayout> -->
+                    <app-checkbox
+                        [options]="{ checked: isChecked, class: 'mt-3 mb-3 pl-4 pr-4' }"
+                        (fnCheck)="rememberPassword($event)"
+                    ></app-checkbox>
+                    <Button class="btn-primary" [text]="'Sign in'"></Button>
+                    <Label
+                        text="Forgot password?"
+                        textWrap="true"
+                        textAlignment="center"
+                        color="#fff"
+                        marginTop="15"
+                        marginBottom="15"
+                    ></Label>
+                </StackLayout>
+
                 <FlexboxLayout
+                    flexDirection="row"
                     alignItems="center"
                     justifyContent="center"
-                    marginTop="15"
-                    marginBottom="15"
+                    flexWrap="wrap"
                 >
-                    <FlexboxLayout
-                        class="social-link"
-                        alignItems="center"
-                        justifyContent="center"
-                    >
-                        <Label class="fa" text="&#xf1a0;"></Label>
-                    </FlexboxLayout>
-                    <FlexboxLayout
-                        class="social-link"
-                        alignItems="center"
-                        justifyContent="center"
+                    <Label
+                        text="Don't have an account?"
+                        textWrap="true"
+                        color="#aaa"
+                    ></Label>
+                    <Label
+                        text="Create account"
+                        textWrap="true"
+                        fontWeight="600"
+                        color="#fff"
                         marginLeft="10"
+                    ></Label>
+                    <Label
+                        text="or login with"
+                        textWrap="true"
+                        color="#aaa"
+                        width="100%"
+                        textAlignment="center"
+                    ></Label>
+                    <FlexboxLayout
+                        alignItems="center"
+                        justifyContent="center"
+                        marginTop="15"
+                        marginBottom="15"
                     >
-                        <Label class="fa" text="&#xf09a;"></Label>
+                        <FlexboxLayout
+                            class="social-link"
+                            alignItems="center"
+                            justifyContent="center"
+                            (tap)="socialLink('google')"
+                        >
+                            <Label class="fa" text="&#xf1a0;"></Label>
+                        </FlexboxLayout>
+                        <FlexboxLayout
+                            class="social-link"
+                            alignItems="center"
+                            justifyContent="center"
+                            marginLeft="10"
+                            (tap)="socialLink('facebook')"
+                        >
+                            <Label class="fa" text="&#xf09a;"></Label>
+                        </FlexboxLayout>
                     </FlexboxLayout>
                 </FlexboxLayout>
-            </FlexboxLayout>
 
-            <FlexboxLayout justifyContent="center">
-                <Label
-                    class="btn-language"
-                    text="Change Language"
-                    marginBottom="20"
-                    width="150"
-                    textAlignment="center"
-                ></Label>
-                <!-- <AbsoluteLayout width="150" class="language-list-wrap">
-                    <StackLayout left="0" top="0" width="100%">
-                        <ListView
-                            [items]="languages"
-                            (itemTap)="selectLanguage($event)"
-                            class="language-list"
-                            separatorColor="transparent"
-                            row="5"
-                        >
-                            <ng-template let-language="item">
-                                <Label
-                                    [text]="language"
-                                    width="100%"
-                                    textAlignment="center"
-                                    class="language-name"
-                                ></Label>
-                            </ng-template>
-                        </ListView>
-                    </StackLayout>
-                </AbsoluteLayout> -->
+                <FlexboxLayout justifyContent="center">
+                    <!-- <Label
+                        class="btn-language"
+                        text="Change Language"
+                        marginBottom="20"
+                        width="150"
+                        textAlignment="center"
+                    ></Label> -->
+                    <!-- <AbsoluteLayout width="150" class="language-list-wrap">
+                        <StackLayout left="0" top="0" width="100%">
+                            <ListView
+                                [items]="languages"
+                                (itemTap)="selectLanguage($event)"
+                                class="language-list"
+                                separatorColor="transparent"
+                                row="5"
+                            >
+                                <ng-template let-language="item">
+                                    <Label
+                                        [text]="language"
+                                        width="100%"
+                                        textAlignment="center"
+                                        class="language-name"
+                                    ></Label>
+                                </ng-template>
+                            </ListView>
+                        </StackLayout>
+                    </AbsoluteLayout> -->
+                </FlexboxLayout>
             </FlexboxLayout>
-        </FlexboxLayout>
-    </ScrollView>
-</FlexboxLayout>
+        </ScrollView>
+    </FlexboxLayout>
+    <FlexboxLayout justifyContent="center" top="680" left="0" width="100%">
+        <Label
+            class="btn-language"
+            text="Change Language"
+            marginBottom="20"
+            width="150"
+            textAlignment="center"
+            (tap)="chooseLanguage()"
+        ></Label>
+    </FlexboxLayout>
+    <FlexboxLayout
+        *ngIf="isShowDropdown"
+        justifyContent="center"
+        top="520"
+        left="0"
+        width="100%"
+    >
+        <ListView
+            [items]="languages"
+            class="language-list"
+            separatorColor="transparent"
+            row="5"
+        >
+            <ng-template let-language="item">
+                <Label
+                    [text]="language"
+                    width="100%"
+                    textAlignment="center"
+                    class="language-name"
+                    (tap)="languageChange(language)"
+                ></Label>
+            </ng-template>
+        </ListView>
+    </FlexboxLayout>
+</AbsoluteLayout>
