--- a/app/login/login.component.scss
+++ b/app/login/login.component.scss
@@ -36,9 +36,11 @@
     color: #f5f5f5;
     background: #666666;
     border-radius: 1000;
-    padding: 2 15;
+    width: 150;
+    padding: 4 0;
     font-weight: 600;
     position: relative;
+    text-align: center;
     z-index: 3;
 }
 
@@ -49,10 +51,12 @@
 .language-list {
     background: #555555;
     border-radius: 10;
-    height: 144;
+    width: 150;
+    height: 158;
     .language-name {
+        font-size: 13;
         color: #e9e9e9;
-        height: 24;
+        height: 26;
         text-transform: uppercase;
         font-weight: 500;
     }
