--- a/app/assets/styles/_grid.scss
+++ b/app/assets/styles/_grid.scss
@@ -1,3 +1,11 @@
+.container {
+    padding: 0 25;
+}
+
+.container-fluid {
+    padding: 0 15;
+}
+
 .row {
     margin-left: -5;
     margin-right: -5;
