--- a/app/home-page/home-page.component.scss
+++ b/app/home-page/home-page.component.scss
@@ -1,1 +1,34 @@
 /* Add mobile styles for the component here.  */
+.total-balance {
+    background-color: #2f2f2f;
+    border-radius: 20;
+    padding: 10;
+    flex-direction: column;
+}
+.balance-title {
+    justify-content: center;
+    align-items: center;
+    Label {
+        font-size: 12;
+        margin-right: 10;
+    }
+    .fa {
+        font-size: 16;
+    }
+}
+.balance-amount {
+    align-items: center;
+    justify-content: center;
+    .balance-number {
+        color: #fff;
+        font-size: 32;
+        font-weight: 700;
+        background-color: transparent;
+        border-width: 0;
+        padding: 0;
+    }
+    .fa {
+        font-size: 20;
+        margin-left: 15;
+    }
+}
