--- a/app/assets/styles/_typography.scss
+++ b/app/assets/styles/_typography.scss
@@ -7,9 +7,17 @@ Label {
     font-size: 20;
     font-weight: bold;
 }
+
+.text-xs {
+    font-size: 10;
+}
+
 .text-white {
     color: #fff;
 }
 .text-mute {
     color: #848484;
+}
+.text-error {
+    color: #961111;
 }
