--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -14,4 +14,5 @@
     <Button [nsRouterLink]="['/modal-error']" text="modal-error"></Button>
     <Button [nsRouterLink]="['/create-account']" text="create-account"></Button>
     <Button [nsRouterLink]="['/home-page']" text="home-page"></Button>
+    <Button [nsRouterLink]="['/swap']" text="swap"></Button>
 </StackLayout>
